2011-05-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/inline.c: disabled failing test for NetBSD

2011-05-15 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c: replace FNONBLOCK and FASYNC with O_NONBLOCK and O_ASYNC

2011-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/rtrack.c: fixed bug 3302328
	* src/port.mk: made ar quiet

2011-05-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/fwk/lib/extern1.c,
	* support/regression/fwk/lib/extern2.c: removed inline for NetBSD builds
	* src/SDCCast.c(decorateType): fixed bug 3117721
	* support/regression/tests/bug3117721.c: new, added
	* support/regression/ports/hc08/spec.mk: removed accidently added libs
	* src/SDCCsymt.c(processFuncArgs): fixed bug 1932626
	* support/regression/tests/bug1932626.c: new, added

2011-05-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/doc/asmlnk.txt,
	* sdas/doc/asxhtm.html: added -w flag
	* sdas/linksrc/lklist.c(slew),
	* sdas/linksrc/lkmain.c(usetxt*): fixed 3299364
	* support/regression/Makefile.in: and a third try to fix include path spec.mk

2011-05-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/host/spec.mk.in,
	* support/regression/ports/mcs51-common/spec.mk,
	* support/regression/ports/ucz80/spec.mk,
	* support/regression/ports/z80/spec.mk: second try to fix include path spec.mk
	* support/regression/tests/inline.c(inlined_function): fixed for host

2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Use const in bitvector functions in some places, where appropriate.

2011-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,